fixing on mobile #5

--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -23,6 +23,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-bottom: 40px;
 }
 
 .chat li
@@ -96,17 +97,45 @@
     float: right;
 }
 
-.li > .chat {
+.chat > .li  {
     margin-top: 10px;
     bottom: 0;
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 800px) {
+    #onlineList > li.obc{
+        display: none;
+    }
     #onlineList{
-        visibility: hidden;
+        margin-bottom: 10px;
+    }
+
+    #titleAnchor:hover{
+        text-decoration: underline;
+    }
+    
+    #titleAnchor{
+        color: #33ccff; 
+        cursor: pointer;
+    }
+    .displ{
+        display: table;
     }
 }
+
+@media only screen and (min-width: 800px) {
+    #titleAnchor:hover{
+        text-decoration: none;
+    }
+    
+    #titleAnchor{
+        color: black;
+        cursor: auto;
+    }
+}
+
+
 
 #loginErrorMsg{
     float: right; 
@@ -115,4 +144,8 @@
 
 .fa-exclamation-triangle{
     float: left;
+}
+
+#titleList{
+    margin-left: 10px;
 }
